--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
   "image": "mcr.microsoft.com/devcontainers/universal:2",
   "features": {
       "ghcr.io/astronomer/devcontainer-features/astro-cli:1": {
-        "version": "v1.9.0"
+        "version": "latest"
       }
   },
   "postCreateCommand": "bash -i -c 'astro dev start -n --wait 5m'",
