--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/universal:2.9",
+  "image": "mcr.microsoft.com/devcontainers/universal:linux",
   "features": {
       "ghcr.io/astronomer/devcontainer-features/astro-cli:1": {
         "version": "1.27.1"
