--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,7 @@
 {
-  "image": "mcr.microsoft.com/devcontainers/universal:linux",
+  "image": "mcr.microsoft.com/devcontainers/universal:2.11.2",
   "features": {
-      "ghcr.io/astronomer/devcontainer-features/astro-cli:1": {
-        "version": "1.9"
-      }
+      "ghcr.io/astronomer/devcontainer-features/astro-cli:1": {}
   },
   "postCreateCommand": "bash -i -c 'astro dev start -n --wait 5m'",
   "forwardPorts": [9090, 8080, 8501, 8502]
